# chatbot_agricole

./: package.json  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
Predictive_Analysis/: Dockerfile  app.py  requirements.txt
Predictive_Analysis/.ipynb_checkpoints/: app-checkpoint.py
Predictive_Analysis/models/: custom_prediction_pipeline.joblib  non_custom_prediction_pipeline.joblib  price_forecasting_model.h5
app/: model.py  server.py  testing.py
app/.ipynb_checkpoints/: server-checkpoint.py
app/models/: 61600.np  61612.np  61627.np  61630.np  61641.np  61666.np  61679.np  61687.np  61695.np  61697.np  61698.np  61699.np  encoder.pkl  price_prediction.h5
notebooks/: Notebook_LambTech_RNN.ipynb  cnn_model.ipynb  dataset_creation.ipynb  price_dataset_preprocessing.ipynb
notebooks/data/: ObservationData_ghzcyke.csv
