[tool.poetry]
name = "mbaykat"
version = "0.1.0"
description = ""
authors = ["Mouhamadou Naby DIA <dnaby@ept.sn>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
langchain-community = "^0.0.38"
langchain-cli = "^0.0.22"
huggingface-hub = "^0.23.0"
transformers = "^4.40.2"
sentence-transformers = "^2.7.0"
langchainhub = "^0.1.15"
langchain-chroma = "^0.1.0"
bs4 = "^0.0.2"
pypdf = "^4.2.0"
neuralprophet = "^0.8.0"
meteostat = "^1.6.7"
fastapi = "0.103.1"
scikit-learn = "1.2.2"
tensorflow = "2.16.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
